// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a button with Outline style 1`] = `
<View
  style={
    [
      {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      {
        "borderRadius": 3,
      },
      [
        {
          "marginBottom": 25,
        },
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
      ],
      false,
    ]
  }
>
  <View
    accessibilityLabel="title (Taste)"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "#107821",
          "borderRadius": 12.5,
          "borderStyle": "solid",
          "borderWidth": 1.5,
          "flexDirection": "row-reverse",
          "height": 75,
          "justifyContent": "center",
          "padding": 8,
        }
      }
    >
      <Text
        style={
          {
            "color": "#107821",
            "fontFamily": "bold",
            "fontSize": 22,
            "fontWeight": "600",
            "paddingHorizontal": 22,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        title
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button renders a default button 1`] = `
<View
  style={
    [
      {
        "borderRadius": 3,
        "overflow": "hidden",
      },
      {
        "borderRadius": 3,
      },
      [
        {
          "marginBottom": 25,
        },
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
      ],
      false,
    ]
  }
>
  <View
    accessibilityLabel="title (Taste)"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "opacity": 1,
      }
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "backgroundColor": "#2089dc",
            "borderColor": "#2089dc",
            "borderRadius": 12.5,
            "borderWidth": 0,
            "flexDirection": "row-reverse",
            "height": 75,
            "justifyContent": "center",
            "padding": 8,
          },
          {
            "backgroundColor": "#107821",
          },
        ]
      }
    >
      <Text
        style={
          {
            "color": "#FFFFFF",
            "fontFamily": "bold",
            "fontSize": 22,
            "fontWeight": "600",
            "paddingHorizontal": 22,
            "paddingVertical": 1,
            "textAlign": "center",
          }
        }
      >
        title
      </Text>
    </View>
  </View>
</View>
`;
